# ethereal-waves

./: .gitignore  Cargo.toml  README.md  com.galacticpirateradio.ethereal-waves.yml  justfile
i18n/cs/: ethereal_waves.ftl
i18n/en/: ethereal_waves.ftl
i18n/sv/: ethereal_waves.ftl
i18n/uk/: ethereal_waves.ftl
resources/: com.galacticpirateradio.ethereal-waves.desktop  com.galacticpirateradio.ethereal-waves.metainfo.xml  com.github.LotusPetal392.ethereal-waves.desktop  com.github.LotusPetal392.ethereal-waves.metainfo.xml
src/: app.rs  config.rs  constants.rs  footer.rs  image_store.rs  key_bind.rs  library.rs  main.rs  menu.rs  mpris.rs  playback_state.rs  player.rs  playlist.rs
src/page/: empty_library.rs  list_view.rs  loading.rs  mod.rs
src/services/: library_service.rs  mod.rs  playback_service.rs  playlist_service.rs
