[package]
name = "ethereal-waves"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0"
description = "Ethereal Waves"
repository = "https://github.com/cosmic-utils/ethereal-waves"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
futures = "0.3.31"
futures-util = "0.3.31"
gstreamer = "0.24.4"
gstreamer-audio = "0.24.4"
gstreamer-pbutils = "0.24.4"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
log = "0.4.29"
open = "5.3.2"
paste = "1.0.15"
rand = "0.9.2"
rust-embed = "8.8.0"
serde = "1.0.228"
serde_json = "1.0.145"
sha256 = "1.6.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.18"
url = "2.5.7"
urlencoding = "2.1.3"
walkdir = "2.5.0"
xdg = "3.0.0"
zbus = "5.13.2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    #"multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

[features]
default = ["xdg-portal", "single-instance", "a11y"]
a11y = ["libcosmic/a11y"]
rfd = ["libcosmic/rfd"]
xdg-portal = ["libcosmic/xdg-portal"]
single-instance = ["libcosmic/single-instance"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
